🎨 IMPROVE: update Post.js and removed the <li className="list-inline-item mt-1">•</li> as there was no point to be there and added too much space inline as well as fixed up some classNames using bootstrap, logs.js was completly fix and changed the <h2 to <span which had a sass effect and changed the font completly and _variable.scss swap some colors around because its what we do

--- a/styles/_variable.scss
+++ b/styles/_variable.scss
@@ -35,10 +35,10 @@ $h3-md: 28px;
 $h4: 24px;
 $h5: 18px;
 $h6: 16px;
-$color-primary: #B48EAD;
-$body-background: #ECEFF4;
-$body-background-dark: #02111a;
-$white: #ffffff;
+$color-primary: #ffba39;
+$body-background: #E5E9F0;
+$body-background-dark: #031735;
+$white: #ECEFF4;
 $black: #000000;
 $dark: #152035;
 $darken: #041722;
